[package]
name = "rd"
version = "0.1.0"
edition = "2018"
description = "Random data generator for the command line"
homepage = "https://www.github.com/dsaxton/rd"
documentation = "https://www.github.com/dsaxton/rd"
repository = "https://www.github.com/dsaxton/rd"
readme = "README.md"
keywords = ["random", "regex"]
license = "MIT OR Apache-2.0"

[dependencies]
rand = "0.8.4"
clap = "3.0.0-beta.2"
