[package]
name = "rdg"
version = "0.1.1"
edition = "2018"
description = "Random data generator for the command line"
homepage = "https://www.github.com/dsaxton/rdg"
documentation = "https://www.github.com/dsaxton/rdg"
repository = "https://www.github.com/dsaxton/rdg"
readme = "README.md"
keywords = ["random", "regex"]
license = "MIT OR Apache-2.0"

[dependencies]
rand = "0.8.4"

[dependencies.clap]
version = "3.0.0-beta.5"
default-features = false
features = ["std", "color"]
